js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-while-trailing-comma-second.js
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
)
;
}
;
reportCompare
(
0
0
)
;
