js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-while-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
;
